--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "PhysAnalysis"
 uuid = "69cbc4a0-077e-48a7-9b45-fa8b7014b5ca"
 authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+ABFReader = "0612f44b-defb-466c-a561-fff8bd3ecefc"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
