--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,7 @@ version = "0.1.0"
 
 [deps]
 ABFReader = "0612f44b-defb-466c-a561-fff8bd3ecefc"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
