--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "PhysAnalysis"
+name = "ePhys"
 uuid = "69cbc4a0-077e-48a7-9b45-fa8b7014b5ca"
 authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
 version = "0.1.0"
@@ -11,6 +11,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
