--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
