--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 ContinuousWavelets = "96eb917e-2868-4417-9cb6-27e7ff17528f"
+Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
