--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 ContinuousWavelets = "96eb917e-2868-4417-9cb6-27e7ff17528f"
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
