--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ePhys"
 uuid = "69cbc4a0-077e-48a7-9b45-fa8b7014b5ca"
 authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
-version = "0.1.0"
+version = "1.1.0-MAIN"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
