--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ePhys"
+name = "NeuroAnalysis"
 uuid = "69cbc4a0-077e-48a7-9b45-fa8b7014b5ca"
 authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
 version = "0.1.0"
