--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 ContinuousWavelets = "96eb917e-2868-4417-9cb6-27e7ff17528f"
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
