saving the name of the package as something different

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "NeuroAnalysis"
+name = "PhysiologyAnalysis"
 uuid = "69cbc4a0-077e-48a7-9b45-fa8b7014b5ca"
 license = "MIT"
 authors = ["Matthew Tarchick <mtarchick13@gmail.com>"]
