--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
