--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
