--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
+HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
@@ -26,6 +27,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 DSP = "0.7"
 DataFrames = "1"
 Distributions = "0.25"
+HypothesisTests = "0.10.11"
 LsqFit = "0.13"
 Polynomials = "3"
 PyCall = "1.95"
