CompatHelper: bump compat for ElectroPhysiology to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 DSP = "0.7"
 DataFrames = "1"
 Distributions = "0.25"
-ElectroPhysiology = "0.2"
+ElectroPhysiology = "0.2, 0.3"
 HypothesisTests = "0.10.11"
 LsqFit = "0.13"
 Polynomials = "3"
