--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 [compat]
 CSV = "0.10"
 DataFrames = "1"
+ElectroPhysiology = "0.4"
 HypothesisTests = "0.10"
 LsqFit = "0.13"
 Polynomials = "3"
