--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,6 @@ HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
-PhysiologyPlotting = "d5a2a81f-3167-4eb5-8f67-b1ebe6a4430d"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -28,6 +27,8 @@ DataFrames = "1"
 ElectroPhysiology = "0.4"
 HypothesisTests = "0.10"
 LsqFit = "0.13"
+ModelingToolkit = "8.0"
+OrdinaryDiffEq = "6.0"
 Polynomials = "3"
 Query = "1"
 StatsBase = "0.33, 0.34"
