--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ ModelingToolkit = "8.0"
 OrdinaryDiffEq = "6.0"
 Polynomials = "3"
 Query = "1"
+Requires = "1"
 StatsBase = "0.33, 0.34"
 XLSX = "0.9"
 julia = "1"
