CompatHelper: bump compat for Polynomials to 4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ HypothesisTests = "0.10, 0.11"
 LsqFit = "0.13"
 ModelingToolkit = "8.0"
 OrdinaryDiffEq = "6.0"
-Polynomials = "3"
+Polynomials = "3, 4"
 Query = "1"
 Requires = "1"
 StatsBase = "0.33, 0.34"
