CompatHelper: bump compat for LsqFit to 0.15, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ CSV = "0.10"
 DataFrames = "1"
 ElectroPhysiology = "0.4"
 HypothesisTests = "0.10, 0.11"
-LsqFit = "0.13"
+LsqFit = "0.13, 0.15"
 ModelingToolkit = "8.0"
 OrdinaryDiffEq = "6.0"
 Polynomials = "3"
