CompatHelper: add new compat entry for Statistics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -33,6 +33,7 @@ OrdinaryDiffEq = "6.0"
 Polynomials = "3"
 Query = "1"
 Requires = "1"
+Statistics = "1"
 StatsBase = "0.33, 0.34"
 XLSX = "0.9"
 julia = "1"
