--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
@@ -19,5 +20,6 @@ CSV = "0.10"
 ElectroPhysiology = "0.5"
 HypothesisTests = "0.10, 0.11"
 LsqFit = "0.15"
+Polynomials = "4.0"
 Requires = "1"
 julia = "1"
