--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
@@ -20,6 +21,7 @@ CSV = "0.10"
 ElectroPhysiology = "0.5"
 HypothesisTests = "0.10, 0.11"
 LsqFit = "0.15"
-Polynomials = "4.0"
+Polynomials = "4"
 Requires = "1"
+Statistics = "1"
 julia = "1"
