found the issue, lets see if it works

--- a/Project.toml
+++ b/Project.toml
@@ -19,9 +19,10 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 CSV = "0.10"
 ElectroPhysiology = "0.5"
-HypothesisTests = "0.10, 0.11"
+HypothesisTests = "0.11"
 LsqFit = "0.15"
 Polynomials = "4"
 Requires = "1"
+StatsBase = "0.34"
 Statistics = "1"
 julia = "1"
