--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,6 +3,7 @@ Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 PhysiologyPlotting = "d5a2a81f-3167-4eb5-8f67-b1ebe6a4430d"
