updated packages and exports

--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,11 @@ version = "0.6.25"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
+ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
@@ -19,10 +23,14 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 CSV = "0.10"
 ElectroPhysiology = "0.5"
+FileIO = "1"
 HypothesisTests = "0.11"
+ImageMagick = "1"
+ImageView = "0.12"
+Images = "0.25"
 LsqFit = "0.15"
 Polynomials = "4"
 Requires = "1"
-StatsBase = "0.34"
 Statistics = "1"
+StatsBase = "0.34"
 julia = "1"
