--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
@@ -25,9 +26,9 @@ CSV = "0.10"
 ElectroPhysiology = "0.5"
 FileIO = "1"
 HypothesisTests = "0.11"
+Images = "0.25"
 ImageMagick = "1"
 ImageView = "0.12"
-Images = "0.25"
 LsqFit = "0.15"
 Polynomials = "4"
 Requires = "1"
