once again fixed the compat section

--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,10 @@ CSV = "0.10"
 ElectroPhysiology = "0.5"
 FileIO = "1"
 HypothesisTests = "0.11"
-Images = "0.25"
+ImageFiltering = "0.7"
 ImageMagick = "1"
 ImageView = "0.12"
+Images = "0.25"
 LsqFit = "0.15"
 Polynomials = "4"
 Requires = "1"
