--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /Manifest.toml
 src/Datasheets/calibration.txt
-test/analysis/PhysiologyAnalysis.jl.code-workspace
+test/analysis/PhysiologyAnalysis.jl.code-workspaces
