--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Manifest.toml
 src/Datasheets/calibration.txt
 test/analysis/PhysiologyAnalysis.jl.code-workspaces
+src/Analysis/ImagingAnalysis/CellPoseModels/cytotorch_0
+src/Analysis/ImagingAnalysis/CellPoseModels/size_cytotorch_0.npy
