--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -29,6 +30,7 @@ ImageFiltering = "0.7"
 ImageMagick = "1"
 Images = "0.25"
 LsqFit = "0.15"
+Peaks = "0.5"
 Polynomials = "4"
 Requires = "1"
 Statistics = "1"
