--- a/Project.toml
+++ b/Project.toml
@@ -7,32 +7,40 @@ version = "0.6.31"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CSV = "0.10"
+DataFrames = "1.7.0"
 ElectroPhysiology = "0.5"
 FileIO = "1"
+GLMakie = "0.11.2"
 HypothesisTests = "0.11"
 ImageFiltering = "0.7"
 ImageMagick = "1"
 Images = "0.26"
+LinearAlgebra = "1.11.0"
 LsqFit = "0.15"
 Peaks = "0.5"
 Polynomials = "4"
 Requires = "1"
+SparseArrays = "1.11.0"
 Statistics = "1"
 StatsBase = "0.34"
 julia = "1"
