update project dependencies and enhance moving average functions for improved baseline analysis

--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
@@ -37,6 +38,7 @@ ImageMagick = "1"
 Images = "0.26"
 LinearAlgebra = "1.11.0"
 LsqFit = "0.15"
+OffsetArrays = "1.15.0"
 Peaks = "0.5"
 Polynomials = "4"
 Requires = "1"
