--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
@@ -36,6 +37,7 @@ HypothesisTests = "0.11"
 ImageFiltering = "0.7"
 ImageMagick = "1"
 Images = "0.26"
+Interpolations = "0.15.1"
 LinearAlgebra = "1.11.0"
 LsqFit = "0.15"
 OffsetArrays = "1.15.0"
