--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Peaks = "18e31ff7-3703-566c-8e60-38913d67486b"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -43,6 +44,7 @@ LsqFit = "0.15"
 OffsetArrays = "1.15.0"
 Peaks = "0.5"
 Polynomials = "4"
+ProgressMeter = "1.10.4"
 Requires = "1"
 SparseArrays = "1.11.0"
 Statistics = "1"
