--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,12 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ElectroPhysiology = "da7a9670-f599-43ac-b818-143f8bf87d45"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
@@ -35,12 +35,12 @@ Colors = "0.13.0"
 DataFrames = "1.7.0"
 ElectroPhysiology = "0.5"
 FileIO = "1"
-GLMakie = "0.11.2"
 HypothesisTests = "0.11"
 ImageFiltering = "0.7"
 ImageMagick = "1"
 Images = "0.26"
 Interpolations = "0.15.1"
+JSON = "0.21.4"
 LinearAlgebra = "1.11.0"
 LsqFit = "0.15"
 OffsetArrays = "1.15.0"
